# preprocess

./: .cvsignore  .gitignore  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.cache  config.status  configure  configure.in  first_time.csh  makedefs  makefile
add_defs/: .cvsignore  makedefs  makedefs.in  makedefs.local
analysis/: Makefile.am
analysis/incl/: analimage.hxx  roothistos.hxx
analysis/lib/: .cvsignore  makefile.in  roothistos.cxx  signaturecut.cxx
analysis/source/: impulse_study.cxx  rootify_fft.cxx  rootify_tree.cxx
doc/: .cvsignore  Executables.tex  Index.tex  Macros.tex  TitlePage.tex  UserManual.tex  makefile  makefile.in  snifs.eps
include/: imagestacksnifs.hxx  ioslice.hxx  kombinatorfit.hxx  overscan.hxx  sectionlist.hxx  valuegetter.hxx
libsrc/: algocams.cxx  image.cxx  imagestacksnifs.cxx  makefile  overscan.cxx  utils.c
pkg/: Makefile.am  Makefile.in
pkg/anal/: Makefile.am  Makefile.in
pkg/anal/incl/: .cvsignore  LinkDef.h  analimage.hxx  roothistos.hxx  rootutils.hxx  signaturecut.hxx
pkg/anal/lib/: .cvsignore  analimage.cxx  makefile.in  roothistos.cxx  rootutils.cxx
pkg/anal/source/: dwt_image.cxx  impulse_study.cxx  makefile.in  quick_anal.cxx  rootify.cxx  rootify_data.cxx  rootify_tree.cxx  specroot.cxx  test_wavelets.cxx
pkg/incl/: fclass_snifs.h
pkg/pipeline/: Makefile.am
pkg/pipeline/data/: biasmodel_B.txt  biasmodel_R.txt  darkmodel_B.txt  darkmodel_R.txt  makefile.in
pkg/pipeline/quick/: makefile.in  quick_bias.sh  quick_preprocess.sh
pkg/preprocess/: .cvsignore  Makefile.am  Makefile.in
pkg/preprocess/incl/: algocams.hxx  analyser.hxx  bichip.hxx  catorfile.hxx  darkmodel.hxx  filter.hxx  image.hxx  imagesnifs.hxx  imagestack.hxx  imagestacksnifs.cxx  imagestacksnifs.hxx  iomethod.hxx  ioplain.hxx  ioslice.hxx  kombinator.hxx  kombinatorfit.hxx  preprocessor.hxx  section.hxx  snifs_const.h  utils.h  valuegetter.hxx
pkg/preprocess/lib/: algocams.cxx  analyser.cxx  bichip.cxx  catorfile.cxx  darkmodel.cxx  filter.cxx  image.cxx  imagesnifs.cxx  imagestack.cxx  imagestacksnifs.cxx  ioplain.cxx  ioslice.cxx  kombinator.cxx  kombinatorfit.cxx  makefile.in  overscan.cxx  preprocessor.cxx  section.cxx  sectionlist.cxx  snifsimage.cxx  utils.c  valuegetter.cxx
pkg/preprocess/source/: add_image.cxx  add_poisson.cxx  bichip_assemble.cxx  bichip_overscan.cxx  bichip_sub_bias.cxx  bichip_variance.cxx  build_dark.cxx  build_flat.cxx  clean_cosmic.cxx  copy_image.cxx  copy_image_slice.cxx  dark_fit.cxx  fft_image.cxx  filter_image.cxx  fit_dark.cxx  fit_image.cxx  guess_dark.cxx  hack_B_headers.cxx  image_flip.cxx  lrerror.cxx  makefile.in  odd_even_correct.cxx  preprocess.cxx  preprocess_bias.cxx  preprocess_bias_stack.cxx  preprocess_dark.cxx  preprocess_dark_2chips.cxx  preprocess_flat.cxx  preprocess_overscan.cxx  quick_look.cxx  quick_median.cxx  remove_bias_dark.cxx  remove_bias_model.cxx  remove_dark.cxx  rickify.cxx  split_image.cxx  stack_bias.cxx  stack_image.cxx  substract_dark.cxx  substract_flat.cxx  (+4 more)
preprocess/: .cvsignore
preprocess/incl/: algocams.hxx  darkmodel.hxx  filter.hxx  ioplain.hxx  kombinator.hxx  preprocessor.hxx  snifs_const.h  utils.h
preprocess/lib/: .cvsignore  analyser.cxx  catorfile.cxx  imagesnifs.cxx  ioslice.cxx  valuegetter.cxx
preprocess/source/: bichip_poisson.cxx  bichip_sub_bias.cxx  makefile.in  preprocess_flat.cxx  quick_look.cxx  rickify.cxx  split_image.cxx  stack_bichip.cxx  stack_image.cxx  substract_overscan.cxx
quick/: makefile.in  quick_preprocess.sh
src/: add_image.cxx  bichip_build.cxx  bichip_overscan.cxx  bichip_variance.cxx  ccd_rem_cosmic.cxx  makefile  remove_dark.cxx  stack_bichip_gain.cxx  stack_dark.cxx
